fixed the images so that they stack on top of each other on mobile devices

--- a/src/components/Meaning.module.css
+++ b/src/components/Meaning.module.css
@@ -28,3 +28,15 @@
 MEDIA QUERIES: MOBILE & TABLET DEVICES
 =======================================
  */
+
+@media (max-width: 360px) {
+  .meaning {
+    padding: 3rem;
+  }
+
+  .paragraph--definition {
+    font-size: 1rem;
+    line-height: 1;
+    padding: 8px;
+  }
+}
